--- a/all.css
+++ b/all.css
@@ -9,13 +9,34 @@ body
 
 .page-head
 {
-	background: lightgray;
+	background: black;
+    padding: 1em;
 }
 
-	.product-title
-	{
-		margin: 0;
-	}
+.product-title
+{
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 2.5em;
+    font-style: italic;
+    margin: 0;
+}
+
+    .product-title__link,
+    .product-title__link:visited,
+    .product-title__link:hover
+    {
+        border-bottom: solid 1px white;
+        color: white;
+        text-decoration: none;
+        text-shadow: 2px 2px 2px rgba(255, 255, 255, .7);
+    }
+
+.product-description
+{
+    color: white;
+    margin: .2em 0 0 0;
+    text-shadow: 2px 1px 2px rgba(255, 255, 255, .7);
+}
 
 .fork-me
 {
@@ -24,3 +45,40 @@ body
 	right: 0;
 	top: 0;
 }
+
+.docs
+{
+    margin: 1em;
+}
+
+    .docs__title
+    {
+        font-family: sans-serif;
+        font-size: 1.5em;
+        font-style: italic;
+        margin: 0;
+        text-shadow: 1px 1px 1px rgba(100, 100, 100, .7);
+    }
+
+    .docs__list
+    {
+        margin: 1em 0;
+        padding: 0 0 0 1em;
+    }
+
+    .docs__item
+    {
+        font-size: 1.3em;
+    }
+
+    .docs__link,
+    .docs__link:visited
+    {
+        color: #00008b;
+    }
+
+    .docs__link:hover
+    {
+        color: blue;
+        text-decoration: none;
+    }
